--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.5.3",
+    "mongoose": "^8.4.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
